--- a/ProyectoPrueba/Base.lproj/Main.storyboard
+++ b/ProyectoPrueba/Base.lproj/Main.storyboard
@@ -195,7 +195,7 @@
                                 <color key="backgroundColor" cocoaTouchSystemColor="lightTextColor"/>
                             </pickerView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" editable="NO" text="Seleccione la característica a mostrar" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="78A-gE-t4r">
-                                <rect key="frame" x="0.0" y="371" width="375" height="203"/>
+                                <rect key="frame" x="0.0" y="371" width="375" height="159"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -219,6 +219,14 @@
                                 <state key="normal" title="Tasación"/>
                                 <connections>
                                     <segue destination="jbA-4K-tLc" kind="show" identifier="Detalle2" id="Edh-hl-6eT"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hsg-uU-hG5">
+                                <rect key="frame" x="133" y="544" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <segue destination="kE4-Ob-OSp" kind="show" id="42A-bi-ktS"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -347,6 +355,21 @@
                 <exit id="2CL-E4-4Rr" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="2919" y="967"/>
+        </scene>
+        <!--View Controller6-->
+        <scene sceneID="NYx-W9-KRq">
+            <objects>
+                <viewController id="kE4-Ob-OSp" customClass="ViewController6" customModule="ProyectoPrueba" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="kT9-fl-ez1">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="UDd-2e-206"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lvb-bx-jZm" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3890" y="920"/>
         </scene>
     </scenes>
     <resources>
